@@ -2,8 +2,7 @@ package it.unibo.inner;
 
 import it.unibo.inner.api.IterableWithPolicy;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import static it.unibo.inner.test.Assertions.assertContentEqualsInOrder;
 
@@ -15,20 +14,20 @@ public class TestIterablePlain {
         return null; // TODO: return the implementation of IterableWithPolicy
     }
 
-    public static void main(String[] args) {
-        Integer[] test1 = { 1, 2, 3, 4, 5, 6, 7, 8, 9 };
+    public static void main(final String[] args) {
+        String[] test1 = { "pippo", "pluto", "paperino" };
 
-        IterableWithPolicy<Integer> evenIterable = getIterableWithPolicy(test1);
-        assertContentEqualsInOrder(evenIterable, Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9));
+        IterableWithPolicy<String> evenIterable = getIterableWithPolicy(test1);
+        assertContentEqualsInOrder(evenIterable, List.of("pippo", "pluto", "paperino"));
 
-        Integer[] test2 = {};
+        String[] test2 = {};
 
-        IterableWithPolicy<Integer> emptyIterable = getIterableWithPolicy(test2);
-        assertContentEqualsInOrder(emptyIterable, new ArrayList<>());
+        IterableWithPolicy<String> emptyIterable = getIterableWithPolicy(test2);
+        assertContentEqualsInOrder(emptyIterable, List.of());
 
-        Integer[] test3 = { 100 };
+        String[] test3 = { "foo" };
 
-        IterableWithPolicy<Integer> oneIterable = getIterableWithPolicy(test3);
-        assertContentEqualsInOrder(oneIterable, Arrays.asList(100));
+        IterableWithPolicy<String> oneIterable = getIterableWithPolicy(test3);
+        assertContentEqualsInOrder(oneIterable, List.of("foo"));
     }
 }
